--- a/Gordan's.html
+++ b/Gordan's.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="../font-awesome-4.6.3/font-awesome-4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../font-awesome-4.6.3/font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="Gordan's.css.">
     <title>Gordan's Profile</title>
 </head>
@@ -115,11 +115,21 @@
             </div>
             <div class="col-md-4 col-sm-6" width="100%">
                 <h3>AROUND THE WEB</h3>
-                <div class="social fa fa-facebook"></div>
-                <div class="social fa fa-google-plus"></div>
-                <div class="social fa fa-twitter"></div>
-                <div class="social fa fa-linkedin"></div>
-                <div class="social fa fa-chrome"></div>
+                <a href="https://www.facebook.com/gordan.teng">
+                    <div class="social fa fa-facebook"> </div>
+                </a>
+                <a href="https://plus.google.com/?hl=zh_tw">
+                    <div class="social fa fa-google-plus"></div>
+                </a>
+                <a href="https://twitter.com/DLMarketo">
+                    <div class="social fa fa-twitter"></div>
+                </a>
+                <a href="https://www.linkedin.com/in/gordan-teng-21b83386?trk=nav_responsive_tab_profile_pic">
+                    <div class="social fa fa-linkedin"></div>
+                </a>
+                <a href="https://www.google.com.tw/">
+                    <div class="social fa fa-chrome"></div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-6" width="100%">
                 <h3>ABOUT FREELANCER</h3>
